stunnel4 (3:4.20-3) unstable; urgency=low

  * Adpot package (closes: #416955).
  * Manage patches to upstream source with quilt.
  * Use less cmd line args to debhelper commands in debian/rules.
  * Ship upstream Changelog (Closes: #419842).
  * Do not compress StunnelConf-0.1.pl (Closes: #432304).
  * Add watch file.
  * Suggests: logcheck-database (Closes: #382099).
  * Move libstunnel.so into /usr/lib/stunnel, as it is a private DSO.

 --

stunnel4 (3:4.20-2) unstable; urgency=low

  * Orphan package

 -- Julien Lemoine <speedblue@debian.org>  Sat, 31 Mar 2007 20:07:55 +0200

stunnel4 (3:4.20-1) unstable; urgency=low

  * New upstream release

 -- Julien Lemoine <speedblue@debian.org>  Sat, 27 Jan 2007 21:43:19 +0100

stunnel4 (3:4.18-2) unstable; urgency=low

  * Updated chroot default path in configuration file
  * Added LSB section in init script

 -- Julien Lemoine <speedblue@debian.org>  Tue,  7 Nov 2006 20:22:04 +0100

stunnel4 (3:4.18-1) unstable; urgency=low

  * New upstream release

 -- Julien Lemoine <speedblue@debian.org>  Wed, 27 Sep 2006 20:33:07 +0200

stunnel4 (3:4.17-2) unstable; urgency=low

  * Check if pids are valid before trying to use kill 
    (Closes: #388379)

 -- Julien Lemoine <speedblue@debian.org>  Wed, 20 Sep 2006 22:04:41 +0200

stunnel4 (3:4.17-1) unstable; urgency=low

  * New upstream release

 -- Julien Lemoine <speedblue@debian.org>  Mon, 11 Sep 2006 22:48:09 +0200

stunnel4 (3:4.16-1) unstable; urgency=low

  * New upstream release

 -- Julien Lemoine <speedblue@debian.org>  Fri,  1 Sep 2006 22:11:10 +0200

stunnel4 (2:4.150-7) unstable; urgency=low

  * Fixed a bug when pid is not given in configuration file :  
    init.d script was looking for /var/run/stunnel4/stunnel4.pid but 
    stunnel was creating /var/run/stunnel4.pid 
    (Closes: #384275)
  * Added check during start to encourage users to fill the pid= section
    of configuration file when start failed (for example if you use two