@@ -7,7 +7,9 @@ Standards-Version: 3.7.2
 
 Package: stunnel4
 Architecture: any
-Conflicts: stunnel
+Conflicts: stunnel (<< 3:4.20-3)
+Provides: stunnel
+Replaces: stunnel
 Depends: ${shlibs:Depends}, openssl, netbase, perl-modules
 Pre-Depends: adduser
 Suggests: logcheck-database
@@ -23,3 +25,12 @@ Description: Universal SSL tunnel for network daemons
  without any changes in the programs' code.
  .
  This package contains a wrapper script for compatibility with stunnel 3.x
+
+Package: stunnel
+Architecture: all
+Depends: stunnel4 (>= 3:4.20-3)
+Description: dummy upgrade package
+ stunnel version 3 has been removed from Debian. This is a dummy package
+ to ease upgrading to stunnel4.
+ .
+ You may safely remove this pacage after the upgrade.
