@@ -70,28 +70,38 @@ install: build-stamp
 	    $(CURDIR)/debian/stunnel4/usr/share/lintian/overrides/stunnel4
 
 binary-indep:
-#Nothing to do here
+	dh_testdir
+	dh_testroot
+	dh_installdocs -i
+	dh_installchangelogs -i
+	dh_compress -i
+	dh_fixperms -i
+	dh_installdeb -i
+	dh_gencontrol -i
+	dh_md5sums -i
+	dh_builddeb -i
+
 
 binary-arch: install
 	dh_testdir
 	dh_testroot
-	dh_installdocs
-	dh_installexamples
-	dh_installman
-	dh_installchangelogs ChangeLog
-	dh_installinit -- defaults
-	dh_installppp --name=0stunnel4
-	dh_installlogrotate
-	dh_link
-	dh_strip
-	dh_compress --exclude=StunnelConf-0.1.pl
-	dh_fixperms
-	dh_makeshlibs -l debian/stunnel4/usr/lib
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_installdocs -a
+	dh_installexamples -a
+	dh_installman -a
+	dh_installchangelogs -a ChangeLog
+	dh_installinit -a -- defaults
+	dh_installppp -a --name=0stunnel4
+	dh_installlogrotate -a
+	dh_link -a
+	dh_strip -a
+	dh_compress -a --exclude=StunnelConf-0.1.pl
+	dh_fixperms -a
+	dh_makeshlibs -a -l debian/stunnel4/usr/lib
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
